# stl

./: .gitignore  Examples.hs  GenHaskell.hs  Main.hs  README.md  README.org  Runtime.hs  Server.hs  Test.hs  cabal.project  default.nix  shell.nix  stack.yaml  stl.cabal
elisp/: stl-mode.el
examples/: Array.stl  Array.types  Drawing.types  RecursionSchemes.stl  ex1.stl  ex1.types  ex2.stl  ex2.types
runtime/: stl-runtime.cabal
runtime/STL/: Runtime.hs
runtime/STL/Runtime/: Builtins.hs  Remote.hs  Serialisation.hs  TypeRep.hs
runtime/STL/Runtime/Remote/: InMemory.hs  Logger.hs  Sockets.hs
runtime/examples/TimeService/: API.hs  API.types  Main.hs  time-service.cabal
src/: STL.hs
src/Data/: StructuralType.hs
src/STL/: Check.hs  DSL.hs  Elab.hs  Eval.hs  Grammar.hs  Pretty.hs  Schema.hs  Subsumption.hs  Syntax.hs  Types.hs
src/STL/CodeGen/: GenHaskell.hs
src/STL/Core/: Check.hs  DSL.hs  Eval.hs  Subsumption.hs  Types.hs
src/STL/Schema/: Extract.hs  Types.hs
src/STL/Syntax/: Lexer.x  LexerInterface.hs  Parser.y  Position.hs  Token.hs  Types.hs
tests/: arrays01.out  arrays01.stl  arrays02.out  arrays2.out  arrays2.stl  basetype01.out  basetype01.stl  basic01.out  basic01.stl  basic01.types  basic02.out  basic02.stl  basic03.out  basic03.types  error01.out  error01.types  error02.out  error02.stl  error03.out  error03.stl  error04.out  error04.stl  error05.out  error05.stl  error06.out  error06.types  error07.out  error07.stl  error08.out  error08.types  error09.out  error09.types  mixins01.out  mixins01.types  mixins02.out  mixins02.types  mixins03.out  mixins03.types  mixins04.out  mixins04.types  (+45 more)
vscode/: package-lock.json  package.json
vscode/src/: extension.ts
vscode/syntaxes/: stl.tmLanguage.json
