name:                stl
version:             0.0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/esmolanka/stl#readme
license:             BSD3
license-file:        LICENSE
author:              Eugene Smolanka
maintainer:          esmolanka@gmail.com
copyright:           Eugene Smolanka
category:            Language
build-type:          Simple
extra-source-files:  README.org
cabal-version:       >=1.10

library
  build-tools:         alex, happy
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror -fno-warn-name-shadowing -fno-warn-unused-do-bind
  exposed-modules:
    STL

    STL.Core.Check
    STL.Core.DSL
    STL.Core.Eval
    STL.Core.Subsumption
    STL.Core.Types

    STL.Syntax
    STL.Syntax.Position
    STL.Syntax.Lexer
    STL.Syntax.Parser
    STL.Syntax.Token
    STL.Syntax.Types

    STL.Elab
    STL.Pretty
    STL.Schema
    STL.Schema.Types
    STL.Schema.Extract

    STL.CodeGen.GenHaskell

    Data.StructuralType

  build-depends:
    base >= 4.7 && < 5, prettyprinter, prettyprinter-ansi-terminal,
    containers, mtl, text, recursion-schemes, data-fix, utf8-string,
    bytestring, array, ansi-terminal

  default-language:    Haskell2010

executable stl
  main-is:             Main.hs
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind
  default-language:    Haskell2010
  build-depends:
    stl, base >= 4.7 && < 5, mtl, bytestring, text, utf8-string,
    prettyprinter, haskeline, ansi-terminal, recursion-schemes,
    data-fix, optparse-applicative

executable stl-tests
  main-is:             Test.hs
  other-modules:       Main
  ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -main-is Test
  default-language:    Haskell2010
  build-depends:
    stl, base >= 4.7 && < 5, mtl, bytestring, text, utf8-string,
    prettyprinter, haskeline, ansi-terminal, recursion-schemes,
    data-fix, tasty, tasty-golden, filepath, directory,
    optparse-applicative

-- executable stl-server
--   main-is:             Server.hs
--   other-modules:
--   ghc-options:         -Wall -fno-warn-name-shadowing -fno-warn-unused-do-bind -main-is Server
--   default-language:    Haskell2010
--   build-depends:
--     base, mtl, text, containers, haskell-lsp >= 0.15 && < 0.16, lens,
--     bytestring, data-default, hslogger, rope-utf16-splay, optparse-applicative,
--     filepath, stl
