name:                stl-runtime
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Yevhen Smolanka
maintainer:          ys@polymorphic.me
-- copyright:
-- category:
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules:     STL.Runtime
  other-modules:
  build-depends:       stl, base >=4.12 && <4.13, text, aeson, template-haskell
  default-language:    Haskell2010
