name:                stl-runtime
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
-- license:
license-file:        LICENSE
author:              Yevhen Smolanka
maintainer:          ys@polymorphic.me
-- copyright:
-- category:
build-type:          Simple

cabal-version:       >=1.10

library
  exposed-modules:     STL.Runtime
                       STL.Runtime.Serialisation
                       STL.Runtime.TypeRep
                       STL.Runtime.Remote
                       STL.Runtime.Remote.Sockets
                       STL.Runtime.Remote.InMemory
                       STL.Runtime.Remote.Logger
  other-modules:       STL.Runtime.Builtins
  build-depends:       stl, base >=4.12 && <5, text, mtl, bytestring,
                       containers, aeson, template-haskell, stm, io-streams,
                       network, attoparsec
  default-language:    Haskell2010
