name:                time-service
version:             0.1.0.0
author:              Yevhen Smolanka
maintainer:          ys@polymorphic.me
build-type:          Simple

cabal-version:       >=1.10

executable time-service
  main-is:             Main.hs
  other-modules:       API
  build-depends:       stl-runtime, base >=4.12 && <5, time, containers, text
  default-language:    Haskell2010
